[gd_scene load_steps=37 format=3 uid="uid://dkounxxjgekmy"]

[ext_resource type="Script" path="res://Scenes/Player/player.gd" id="1_wd8h7"]
[ext_resource type="Texture2D" uid="uid://cwalw2q6eerxc" path="res://Assets/Ships/Hauler/Hull.png" id="3_nyebr"]
[ext_resource type="Script" path="res://Scenes/Player/ShipVisuals.gd" id="3_qew4i"]
[ext_resource type="Texture2D" uid="uid://dw82sd22ri00l" path="res://Assets/Ships/Hauler/Cockpit.png" id="4_bpyr2"]
[ext_resource type="Script" path="res://Scenes/Player/blinkers.gd" id="4_tpib4"]
[ext_resource type="Texture2D" uid="uid://x2hbovos4tgm" path="res://Assets/Ships/Hauler/Accents/Standard.png" id="6_uxtss"]
[ext_resource type="Script" path="res://Scenes/Player/accents.gd" id="7_m5e4n"]
[ext_resource type="Texture2D" uid="uid://ciu15uyjp0d4t" path="res://Assets/Ships/Hauler/Accents/Hornet.png" id="7_oxlck"]
[ext_resource type="Texture2D" uid="uid://x0boqyafibic" path="res://Assets/Ships/Hauler/Accents/Greeble.png" id="8_a3clv"]
[ext_resource type="Texture2D" uid="uid://qetf1yww2knv" path="res://Assets/Ships/Hauler/Blinkers.png" id="9_mirtk"]
[ext_resource type="Texture2D" uid="uid://b7vm7s17jsbpc" path="res://Assets/Ships/Hauler/Inline.png" id="11_vsl33"]
[ext_resource type="Texture2D" uid="uid://c4acnpm70m6on" path="res://Assets/Ships/Hauler/Outline.png" id="12_m2iy2"]
[ext_resource type="Texture2D" uid="uid://n15ohgwk2in3" path="res://Assets/Ships/Upgrades/RCSReticle.png" id="13_lfga7"]
[ext_resource type="Script" path="res://Scenes/Player/rcs.gd" id="13_mbj2r"]
[ext_resource type="Script" path="res://Scenes/Player/player_stat_block.gd" id="13_xyph6"]
[ext_resource type="Texture2D" uid="uid://d22xcm0wk7t4j" path="res://Assets/Ships/Upgrades/Manipulator.png" id="14_sk8mm"]
[ext_resource type="Script" path="res://Scenes/Player/manipulator.gd" id="14_u3e7e"]
[ext_resource type="Script" path="res://Scenes/Player/hookmagnet.gd" id="15_8a6ob"]
[ext_resource type="Script" path="res://Scenes/Player/needle_laser.gd" id="16_0qxki"]
[ext_resource type="Texture2D" uid="uid://13trc2cvbynb" path="res://Assets/Ships/Upgrades/LaserReticle.png" id="16_qb3xo"]
[ext_resource type="Shader" path="res://Shaders/AreaPulse.gdshader" id="16_requx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kl7m2"]
radius = 13.0

[sub_resource type="CircleShape2D" id="CircleShape2D_qfng1"]
radius = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_fveu6"]
radius = 1.0

[sub_resource type="AtlasTexture" id="AtlasTexture_raptr"]
atlas = ExtResource("14_sk8mm")
region = Rect2(0, 7, 4, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_0mogm"]
atlas = ExtResource("14_sk8mm")
region = Rect2(0, 17, 4, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_nfpwv"]
atlas = ExtResource("14_sk8mm")
region = Rect2(0, 0, 3.9, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_5pmms"]
atlas = ExtResource("14_sk8mm")
region = Rect2(0, 14, 3, 4)

[sub_resource type="AtlasTexture" id="AtlasTexture_seq18"]
atlas = ExtResource("14_sk8mm")
region = Rect2(0, 0, 4, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_g53c2"]
atlas = ExtResource("14_sk8mm")
region = Rect2(0, 14, 3, 4)

[sub_resource type="CircleShape2D" id="CircleShape2D_kk0yk"]
radius = 144.0

[sub_resource type="AtlasTexture" id="AtlasTexture_v7d0o"]
atlas = ExtResource("16_qb3xo")
region = Rect2(14, 14, 4, 4)

[sub_resource type="AtlasTexture" id="AtlasTexture_5rfwe"]
atlas = ExtResource("16_qb3xo")
region = Rect2(19, 14, 4, 4)

[sub_resource type="CircleShape2D" id="CircleShape2D_nf5yv"]
radius = 80.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_837mv"]
shader = ExtResource("16_requx")
shader_parameter/ring_color = Color(0.2378, 0.460977, 0.82, 0.498039)
shader_parameter/ring_frequency = 30.0
shader_parameter/ring_portion = 0.99
shader_parameter/move_speed = 5.0
shader_parameter/smooth_edge = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ostx6"]
shader = ExtResource("16_requx")
shader_parameter/ring_color = Color(0.83, 0.1909, 0.25481, 0.498039)
shader_parameter/ring_frequency = 30.0
shader_parameter/ring_portion = 0.99
shader_parameter/move_speed = -5.0
shader_parameter/smooth_edge = true

[node name="Player" type="RigidBody2D" node_paths=PackedStringArray("Stats")]
rotation = -1.5708
disable_mode = 2
collision_layer = 2
collision_priority = 2.0
can_sleep = false
continuous_cd = 2
contact_monitor = true
max_contacts_reported = 10
script = ExtResource("1_wd8h7")
Stats = NodePath("PlayerStatBlock")
isPlayer = true
Radius = 13.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 7
shape = SubResource("CircleShape2D_kl7m2")
debug_color = Color(0, 0.595, 0.7, 0)

[node name="ShipVisuals" type="Node2D" parent="."]
z_index = 100
rotation = 1.5708
script = ExtResource("3_qew4i")

[node name="Hull" type="Sprite2D" parent="ShipVisuals"]
modulate = Color(0.211765, 0.239216, 0.321569, 1)
texture = ExtResource("3_nyebr")

[node name="Cockpit" type="Sprite2D" parent="ShipVisuals"]
modulate = Color(0.00392157, 0, 0.121569, 1)
z_index = 1
texture = ExtResource("4_bpyr2")

[node name="Accents" type="Node2D" parent="ShipVisuals"]
modulate = Color(0.278431, 0.54902, 0.74902, 1)
script = ExtResource("7_m5e4n")

[node name="Standard" type="Sprite2D" parent="ShipVisuals/Accents"]
z_index = 3
texture = ExtResource("6_uxtss")

[node name="Hornet" type="Sprite2D" parent="ShipVisuals/Accents"]
visible = false
z_index = 3
texture = ExtResource("7_oxlck")

[node name="Greeble" type="Sprite2D" parent="ShipVisuals/Accents"]
visible = false
z_index = 3
texture = ExtResource("8_a3clv")

[node name="Blinkers" type="Sprite2D" parent="ShipVisuals"]
self_modulate = Color(0, 0, 0, 1)
z_index = 4
texture = ExtResource("9_mirtk")
script = ExtResource("4_tpib4")

[node name="Inline" type="Sprite2D" parent="ShipVisuals"]
modulate = Color(0.129412, 0.145098, 0.196078, 1)
z_index = 5
texture = ExtResource("11_vsl33")

[node name="Outline" type="Sprite2D" parent="ShipVisuals"]
modulate = Color(0.2, 0.545098, 1, 1)
z_index = 6
texture = ExtResource("12_m2iy2")

[node name="RCSTransform" type="RemoteTransform2D" parent="."]
remote_path = NodePath("../RCS")
update_rotation = false

[node name="RCS" type="Node2D" parent="."]
top_level = true
script = ExtResource("13_mbj2r")

[node name="RCSTarget" type="Marker2D" parent="RCS"]
position = Vector2(0, -32)

[node name="RcsReticle" type="Sprite2D" parent="RCS/RCSTarget"]
texture = ExtResource("13_lfga7")

[node name="PlayerStatBlock" type="Node" parent="."]
script = ExtResource("13_xyph6")

[node name="HookTransform" type="RemoteTransform2D" parent="."]
remote_path = NodePath("../Manipulator")
update_rotation = false

[node name="Manipulator" type="Node2D" parent="."]
top_level = true
z_index = -1
script = ExtResource("14_u3e7e")

[node name="ManipulatorArea" type="Area2D" parent="Manipulator"]
collision_layer = 0
collision_mask = 4
monitorable = false
priority = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Manipulator/ManipulatorArea"]
shape = SubResource("CircleShape2D_qfng1")
debug_color = Color(0.785, 0.14, 1, 0)

[node name="GrabBox" type="Area2D" parent="Manipulator"]
z_index = 110
position = Vector2(21.7049, 23.5138)
collision_layer = 0
collision_mask = 4
monitorable = false
priority = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Manipulator/GrabBox"]
shape = SubResource("CircleShape2D_fveu6")
debug_color = Color(0.7, 0.583333, 0, 0)

[node name="BaseSprite" type="Node2D" parent="Manipulator"]
rotation = -0.745416

[node name="ArmSprite" type="Sprite2D" parent="Manipulator/BaseSprite"]
self_modulate = Color(0.211765, 0.239216, 0.321569, 1)
z_index = -1
position = Vector2(0, 19)
scale = Vector2(0.999866, 0.999866)
texture = SubResource("AtlasTexture_raptr")
centered = false
offset = Vector2(-2, 1)
flip_v = true

[node name="ArmAccent" type="Sprite2D" parent="Manipulator/BaseSprite/ArmSprite"]
self_modulate = Color(0.278431, 0.54902, 0.74902, 1)
texture = SubResource("AtlasTexture_0mogm")
centered = false
offset = Vector2(-2, 1)
flip_v = true

[node name="RHSGrabber" type="Sprite2D" parent="Manipulator/BaseSprite/ArmSprite"]
self_modulate = Color(0.211765, 0.239216, 0.321569, 1)
position = Vector2(-0.000115806, 7.5)
rotation = 0.785398
texture = SubResource("AtlasTexture_nfpwv")
centered = false
offset = Vector2(-3, -1)
flip_v = true

[node name="RHSGAccent" type="Sprite2D" parent="Manipulator/BaseSprite/ArmSprite/RHSGrabber"]
self_modulate = Color(0.278431, 0.54902, 0.74902, 1)
texture = SubResource("AtlasTexture_5pmms")
centered = false
offset = Vector2(-3, 3)

[node name="LHSGrabber" type="Sprite2D" parent="Manipulator/BaseSprite/ArmSprite"]
self_modulate = Color(0.211765, 0.239216, 0.321569, 1)
position = Vector2(-0.000115806, 7.5)
rotation = -0.785398
texture = SubResource("AtlasTexture_seq18")
centered = false
offset = Vector2(-1, -1)
flip_h = true
flip_v = true

[node name="LHSGAccent" type="Sprite2D" parent="Manipulator/BaseSprite/ArmSprite/LHSGrabber"]
self_modulate = Color(0.278431, 0.54902, 0.74902, 1)
texture = SubResource("AtlasTexture_g53c2")
centered = false
offset = Vector2(0, 3)

[node name="Extendo" type="Line2D" parent="Manipulator/BaseSprite"]
z_index = -2
points = PackedVector2Array(0, 0, 0, 20)
width = 1.0
default_color = Color(0.129412, 0.145098, 0.196078, 1)

[node name="LaserTransform" type="RemoteTransform2D" parent="."]
remote_path = NodePath("../NeedleLaser")
update_rotation = false

[node name="NeedleLaser" type="Node2D" parent="."]
top_level = true
z_index = -30
script = ExtResource("16_0qxki")

[node name="LaserArea" type="Area2D" parent="NeedleLaser"]
collision_layer = 0
collision_mask = 5
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="NeedleLaser/LaserArea"]
z_index = -105
shape = SubResource("CircleShape2D_kk0yk")
debug_color = Color(0.15, 0.546667, 1, 0)

[node name="LaserLine" type="Line2D" parent="NeedleLaser"]
points = PackedVector2Array(0, 0, 40.4781, -121.431)
width = 1.0
default_color = Color(1, 0.842223, 0.842223, 1)
begin_cap_mode = 2

[node name="LaserTarget" type="Marker2D" parent="NeedleLaser"]
position = Vector2(40.4781, -121.431)

[node name="LaserRay" type="RayCast2D" parent="NeedleLaser"]
enabled = false
target_position = Vector2(40.4781, -121.431)

[node name="Endpoint" type="Marker2D" parent="NeedleLaser"]
position = Vector2(40.4781, -121.431)

[node name="Sprite2D" type="Sprite2D" parent="NeedleLaser/Endpoint"]
texture = SubResource("AtlasTexture_v7d0o")

[node name="Color" type="Sprite2D" parent="NeedleLaser/Endpoint"]
modulate = Color(1, 0.842223, 0.842223, 1)
texture = SubResource("AtlasTexture_5rfwe")

[node name="MagnetArea" type="Area2D" parent="."]
z_index = -200
z_as_relative = false
rotation = 1.5708
collision_layer = 0
collision_mask = 5
monitorable = false
script = ExtResource("15_8a6ob")

[node name="CollisionShape2D" type="CollisionShape2D" parent="MagnetArea"]
shape = SubResource("CircleShape2D_nf5yv")
debug_color = Color(0.653333, 0.7, 0, 0)

[node name="Attract" type="ColorRect" parent="MagnetArea"]
material = SubResource("ShaderMaterial_837mv")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -80.0
offset_right = -64.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(10, 10)

[node name="Repel" type="ColorRect" parent="MagnetArea"]
material = SubResource("ShaderMaterial_ostx6")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -80.0
offset_right = -64.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(10, 10)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="firemalasar" from="ShipVisuals" to="NeedleLaser" method="_on_ship_visuals_firemalasar"]
[connection signal="body_entered" from="Manipulator/ManipulatorArea" to="Manipulator" method="_on_manipulator_area_body_entered"]
[connection signal="body_entered" from="Manipulator/GrabBox" to="Manipulator" method="_on_grab_box_body_entered"]
[connection signal="body_entered" from="MagnetArea" to="MagnetArea" method="_on_body_entered"]
[connection signal="body_exited" from="MagnetArea" to="MagnetArea" method="_on_body_exited"]
